--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -49,10 +49,10 @@
    "source": [
     "# HumEnv basics\n",
     "\n",
-    "`make_humenv` is a custom environment creation function. It returns a tuple `(env, manager)`. This has a similar interface to the standard `gymnasium.make_vec` interface. \n",
+    "`make_humenv` is a custom environment creation function. It returns a tuple `(env, mp_info)`. This has a similar interface to the standard `gymnasium.make_vec` interface. \n",
     "\n",
     "\n",
-    "The manager is used to share objects between processes (see this [link](https://docs.python.org/3/library/multiprocessing.html#multiprocessing.Manager)). For example, we use it to share the dataset of motions between different environments when using multiprocessing. Manager can be `None` (when not used) or `multiprocessing.Manager()`. If manager is not `None` you should call `shutdown` before exiting the application.  "
+    "`mp_info` is a dictionary containing information about [multiprocess manager](https://docs.python.org/3/library/multiprocessing.html#multiprocessing.Manager) and shared objects. For example, we use it to share the dataset of motions between different environments when using multiprocessing. In this case, `mp_info` will contain a manager `multiprocessing.Manager()` (`mp_info[\"manager\"]`) and a shared motion buffer (`mp_info[\"motion_buffer\"]`). Note that since `mp_info[\"motion_buffer\"]` is a shared object, any change to this class will propagate to the processes. You should call `mp_info[\"manager\"].shutdown()` before exiting the application.  "
    ]
   },
   {
@@ -62,14 +62,14 @@
    "outputs": [],
    "source": [
     "# make a single environment\n",
-    "env, manager = make_humenv()\n",
+    "env, mp_info = make_humenv()\n",
     "print(f\"environment: {env}\")\n",
-    "print(f\"manager: {manager}\")\n",
+    "print(f\"mp_info: {mp_info}\")\n",
     "\n",
     "# As in gymnasium, `close` should be called when the environment is not needed anymore\n",
     "env.close()\n",
-    "if manager is not None:\n",
-    "    manager.shutdown()"
+    "if mp_info is not None:\n",
+    "    mp_info[\"manager\"].shutdown()"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env, manager = make_humenv(max_episode_steps=1000)\n",
+    "env, mp_info = make_humenv(max_episode_steps=1000)\n",
     "print(f\"time step: {env.spec.max_episode_steps}\")\n",
     "env.close()"
    ]
@@ -105,12 +105,12 @@
    "source": [
     "for mode in [\"sync\", \"async\"]:\n",
     "    print(mode)\n",
-    "    env, manager = make_humenv(num_envs=4, vectorization_mode=\"async\") # multiprocess\n",
+    "    env, mp_info = make_humenv(num_envs=4, vectorization_mode=\"async\") # multiprocess\n",
     "    print(f\"environment: {env}\")\n",
-    "    print(f\"manager: {manager}\")\n",
+    "    print(f\"manager: {mp_info}\")\n",
     "    env.close()\n",
-    "    if manager is not None:\n",
-    "        manager.shutdown()\n",
+    "    if mp_info is not None:\n",
+    "        mp_info[\"manager\"].shutdown()\n",
     "    print()"
    ]
   },
